# ThisWeekInMyLife

./: .gitignore  README.md  com.github.zhrexl.kanban.json  com.github.zhrexl.thisweekinmylife.json  io.github.zhrexl.thisweekinmylife.json  meson.build
.cache/clangd/index/: kanban-application.c.1CDCB30D48C5F8DB.idx  kanban-application.h.815F64EEB11464E6.idx  kanban-card.c.22A43BAA8BB0B3E3.idx  kanban-card.h.E71F422CFBC930D8.idx  kanban-column.c.7DF72D483FB10A92.idx  kanban-column.h.C7142082A6B170F2.idx  kanban-window.c.60B904236EF669C8.idx  kanban-window.h.D52FCD10CE02F564.idx  main.c.1226475A4CF0C884.idx
.flatpak-builder/cache/refs/heads/x86_64-com.github.zhrexl.kanban.json/: init
.flatpak-builder/cache/refs/heads/x86_64-com.github.zhrexl.thisweekinmylife.json/: init
.flatpak-builder/checksums/: x86_64-com.github.zhrexl.kanban.json  x86_64-com.github.zhrexl.thisweekinmylife.json  x86_64-io.github.zhrexl.thisweekinmylife.json
data/: com.github.zhrexl.ThisWeekInMyLife.appdata.xml.in  com.github.zhrexl.ThisWeekInMyLife.gschema.xml  com.github.zhrexl.kanban.appdata.xml.in  com.github.zhrexl.kanban.desktop.in  com.github.zhrexl.kanban.gschema.xml  io.github.zhrexl.ThisWeekInMyLife.desktop.in  io.github.zhrexl.thisweekinmylife.appdata.xml.in  io.github.zhrexl.thisweekinmylife.desktop.in  io.github.zhrexl.thisweekinmylife.gschema.xml  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  de_DE.po  en_US.po  es_ES.po  it.po  it_IT.po  meson.build  pt_BR.po  thisweekinmylife.pot
src/: ThisWeekInMyLife.gresource.xml  kanban-application.c  kanban-application.h  kanban-card.c  kanban-card.h  kanban-card.ui  kanban-column.c  kanban-column.h  kanban-column.ui  kanban-window.c  kanban-window.h  kanban-window.ui  main.c  meson.build  stylesheet.css  thisweekinmylife.gresource.xml
src/utils/: kanban-serializer.c  kanban-serializer.h  meson.build
(+1 files in other folders)
